Edit 'Question need to be answered' in Report.ipynb

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -6,8 +6,7 @@
     "id": "jjysCVpWn0Hm"
    },
    "source": [
-    "## <center>Nhập môn Khoa học dữ liệu\n",
-    "# <center>Đồ án cuối kỳ\n",
+    "# Nhập môn Khoa học Dữ liệu - Đồ án cuối kỳ\n",
     "\n",
     "Thành viên thực hiện\n",
     "- 18127123 - Nguyễn Trung Kiên\n",
@@ -529,9 +528,9 @@
     "id": "W0ef7KfLc9L2"
    },
    "source": [
-    "- **Câu hỏi:** Có công thức nào để dự đoán được giá vé xe (1 chiều) khi biết thông tin về điểm đi, điểm đến và số chỗ ngồi trên xe hay không?\n",
+    "- **Câu hỏi:** Có công thức nào để dự đoán được giá vé xe khi biết thông tin về điểm đi, điểm đến và số chỗ ngồi trên xe hay không?\n",
     "\n",
-    "- **Ý nghĩa khi trả lời câu hỏi trên:** Một doanh nghiệp đang có ý định mở một dịch vụ xe khách nhưng không biết giá vé tiêu chuẩn của các hãng xe trên thị trường đang là khoảng bao nhiêu. Doanh nghiệp chỉ biết được điểm đi, điểm đến dự kiến và số ghế ngồi trên xe mà doanh nghiệp đang sở hữu. Khi đó, phần mềm dự đoán vé xe dựa vào 3 tiêu chí (điểm đi, điểm đến, số chỗ) như trên sẽ giúp chủ doanh nghiệp nắm bắt được giá cả của thị trường."
+    "- **Ý nghĩa khi trả lời câu hỏi trên:** Doanh nghiệp vận tải muốn mở một tuyến đường mà *chưa có doanh nghiệp nào khai thác* thì việc tham khảo cũng như đưa ra mức giá là khá khó; đối với các tuyến đã có người khai thác thì chỉ cần tham khảo giá của họ rồi hiệu chỉnh, áp dụng. Do đó, trả lời được câu hỏi này sẽ giúp doanh nghiệp đưa ra được giá vé hợp lý dựa theo ba tiêu chí: điểm đi, điểm đến và số chỗ."
    ]
   },
   {
