Add a heat map in Report.ipynb

--- a/CollectData.ipynb
+++ b/CollectData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 280,
@@ -25,12 +25,12 @@
     "import requests_cache\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
-    "requests_cache.install_cache()"
+    "requests_cache.install_cache(expire_after=-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "id": "HjUfUG51NKjJ"
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -68,7 +68,7 @@
        "64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "id": "x90Du6blNRr8"
    },
