A small change in Report.ipynb

--- a/Report.ipynb
+++ b/Report.ipynb
@@ -74,7 +74,6 @@
    "outputs": [],
    "source": [
     "import warnings\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
@@ -89,10 +88,8 @@
     "from sklearn.neural_network import MLPRegressor\n",
     "from sklearn import set_config\n",
     "\n",
-    "# Visualize the piepeline\n",
-    "set_config(display='diagram')\n",
-    "# Hide all warnings\n",
-    "warnings.filterwarnings('ignore')"
+    "set_config(display='diagram')     # Trực quan hóa pipeline\n",
+    "warnings.filterwarnings('ignore') # Ẩn tất cả warnings"
    ]
   },
   {
